fix: spacing, remove magic variables/offsets

--- a/packages/components/src/components/tag/tag.css
+++ b/packages/components/src/components/tag/tag.css
@@ -23,7 +23,10 @@
   --background-disabled: var(--telekom-color-ui-faint);
   --color-disabled: var(--telekom-color-text-and-icon-disabled);
 
-  --spacing-dismissable: var(--telekom-spacing-unit-x05)
+  --spacing-dismissable: var(--telekom-spacing-unit-x1)
+  var(--telekom-spacing-unit-x1) var(--telekom-spacing-unit-x1)
+  var(--telekom-spacing-unit-x1);
+  --spacing-dismissable-small: var(--telekom-spacing-unit-x05)
     var(--telekom-spacing-unit-x05) var(--telekom-spacing-unit-x05)
     var(--telekom-spacing-unit-x1);
 
@@ -44,10 +47,9 @@
   --background-button-dismissable-active: var(
     --telekom-color-ui-state-fill-pressed
   );
-  --height-button-dismissable: 20px;
-  --width-button-dismissable: 20px;
-  --height-button-dismissable-small: 18px;
-  --width-button-dismissable-small: 18px;
+
+  --height-button-dismissable: 16px;
+  --width-button-dismissable: 16px;
 
   --spacing-small: 0 var(--telekom-spacing-unit-x2);
   --font-size-small: var(--telekom-typography-font-size-small);
@@ -106,12 +108,10 @@ dismissable
   align-items: center;
 }
 .tag--dismissable scale-icon-action-close {
-  padding-top: 0.5px;
-  height: 20px; /*magic number*/
+  display: flex !important;
   align-items: center;
 }
 .tag--dismissable button:focus {
-  border: var(--border-button-dismissable-focus);
   justify-content: center;
   outline: var(--focus-outline);
 }
@@ -134,9 +134,6 @@ dismissable
 .tag--dismissable.tag--type-strong.tag--color-standard button:active {
   background: var(--background-button-standard-strong-dismissible-hover);
 }
-.tag--dismissable button:focus scale-icon-action-close {
-  margin-top: -1px;
-}
 
 /**
 size small
@@ -151,17 +148,9 @@ size small
   padding-right: 0px;
 }
 .tag--size-small.tag--dismissable button {
-  height: var(--height-button-dismissable-small);
-  width: var(--width-button-dismissable-small);
-}
-.tag--size-small.tag--dismissable scale-icon-action-close {
-  height: var(--height-button-dismissable-small);
-  margin-top: -0.5px;
-}
-
-.tag--size-small.tag--dismissable button:focus scale-icon-action-close {
-  height: var(--height-button-dismissable-small);
-  margin-top: -1.4px;
+  height: var(--height-button-dismissable);
+  width: var(--width-button-dismissable);
+  margin: var(--spacing-dismissable-small);
 }
 
 /**
@@ -186,7 +175,6 @@ link
   text-decoration: none;
 }
 .tag--link:focus {
-  border: 1px solid white;
   outline: var(--focus-outline);
 }
 .tag--link {
@@ -194,10 +182,6 @@ link
 }
 .tag--link:hover {
   background: var(--background-secondary);
-}
-
-.tag--link:focus {
-  border: 1px solid white;
 }
 
 /**
